--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
+        "consoletvs/charts": "^6.7",
+        "endroid/qr-code": "^5.0",
         "jeroennoten/laravel-adminlte": "^3.11",
         "laravel/framework": "^11.9",
         "laravel/telescope": "^5.1",
