--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "chart.js": "^4.4.3"
+        "chart.js": "^4.4.3",
+        "sweetalert2": "^11.14.1"
     }
 }
