Logica de modulo de compras con orden de compra y sin orden de compra funcionando!

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         },
         
         "files": [
-        "app/Helpers/MenuHelper.php"
+        "app/Helpers/MenuHelper.php",
+        "app/Helpers/FormatHelper.php"
     ]
     },
     "autoload-dev": {
